[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Animated Objects/Traps/Tronco.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Armadilha_tronco.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animated Objects/Traps/Wood.png" type="Texture" id=3]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/fast-whoosh.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/swing.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.5, 9.5 )

[sub_resource type="Animation" id=2]
resource_name = "Balancar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -104.0, 104.0, -104.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 201, 541.5 )

[node name="Armadilha_tronco" type="Node2D"]
rotation = -1.5708
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, 72.5 )

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 29.503, 36 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Node2D"]
position = Vector2( 0, 36 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="Node2D"]
position = Vector2( -30, 36 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="Node2D"]
position = Vector2( -44, 36.5 )
scale = Vector2( 1, 1.85 )
texture = ExtResource( 3 )

[node name="Sprite5" type="Sprite" parent="Node2D"]
position = Vector2( 41, 36.5 )
scale = Vector2( 1, 1.85 )
texture = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
margin_left = -3.0
margin_top = -73.0
margin_right = 2.0
margin_bottom = 46.5
color = Color( 0, 0, 0, 0.392157 )

[node name="ColorRect" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -71.5
margin_right = 1.0
margin_bottom = 46.5
color = Color( 0.811765, 0.666667, 0.505882, 1 )

[node name="ColorRect3" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -68.0
margin_right = 1.0
margin_bottom = -67.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect4" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -62.0
margin_right = 1.0
margin_bottom = -61.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect5" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -55.0
margin_right = 1.0
margin_bottom = -54.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect6" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -48.0
margin_right = 1.0
margin_bottom = -47.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect7" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -41.0
margin_right = 1.0
margin_bottom = -40.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect8" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -34.0
margin_right = 1.0
margin_bottom = -33.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect9" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -27.0
margin_right = 1.0
margin_bottom = -26.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect10" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -20.0
margin_right = 1.0
margin_bottom = -19.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect11" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -12.0
margin_right = 1.0
margin_bottom = -11.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect12" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = -5.0
margin_right = 1.0
margin_bottom = -4.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect13" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = 3.0
margin_right = 1.0
margin_bottom = 4.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect14" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = 10.0
margin_right = 1.0
margin_bottom = 11.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect15" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = 18.0
margin_right = 1.0
margin_bottom = 19.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="ColorRect16" type="ColorRect" parent="Node2D"]
margin_left = -2.0
margin_top = 26.0
margin_right = 1.0
margin_bottom = 27.0
color = Color( 0.552941, 0.470588, 0.380392, 1 )

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( -1.5, 109.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Balancar = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Detector_audivel" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_audivel"]
position = Vector2( -3.00004, 110.5 )
shape = SubResource( 4 )

[node name="Som_rapido" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Som_corda" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_entered" from="Detector_audivel" to="." method="_on_Detector_audivel_body_entered"]
[connection signal="body_exited" from="Detector_audivel" to="." method="_on_Detector_audivel_body_exited"]
